prusti-tests/tests/parse/ui/exists_fail.stderr
error: expected `(`
 --> $DIR/exists_fail.rs:8:12
  |
8 | #[requires(exists)]
  |            ^^^^^^

error: expected `|`
  --> $DIR/exists_fail.rs:11:18
   |
11 | #[requires(exists())]
   |                  ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:14:19
   |
14 | #[requires(exists(|))]
   |                   ^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:17:19
   |
17 | #[requires(exists(||) 1+1)]
   |                   ^^

error: expected `:`
  --> $DIR/exists_fail.rs:20:21
   |
20 | #[requires(exists(|a, b| true))]
   |                     ^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:23:19
   |
23 | #[requires(exists(||) || exists(||))]
   |                   ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:26:19
   |
26 | #[requires(exists(|| 1+1 == 1+1, triggers=[1]))]
   |                   ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:29:19
   |
29 | #[requires(exists(|| true, triggers=[(1,2), 1]))]
   |                   ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:32:19
   |
32 | #[requires(exists(|| true, triggers=1))]
   |                   ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:35:19
   |
35 | #[requires(exists(||))]
   |                   ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:38:19
   |
38 | #[requires(exists(|| 1+1 == 1+1))]
   |                   ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:41:19
   |
41 | #[requires(exists(||, triggers=[]))]
   |                   ^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:44:19
   |
44 | #[requires(exists(|| 1+1 == 1+1, triggers=[(1,)]))]
   |                   ^^

error: aborting due to 13 previous errors

